--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -55,6 +55,11 @@ video {
   -webkit-user-drag: none;
 }
 
+picture img {
+  width: 100%;
+  height: 100%;
+}
+
 hr {
   height: 0;
   color: inherit;
